# randextract

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/source/: api.rst  conf.py  getting-started.rst  index.rst  references.bib  release-notes.rst
docs/source/tests/: index.rst  toeplitz-unit.rst  trevisan-unit.rst
docs/source/theory/: index.rst  motivation.rst  randomness-extractors.rst  toeplitz-hashing.rst  trevisan.rst  two-universal.rst
docs/source/usage/: examples.rst  index.rst  testing-modified-toeplitz-gpu.rst  testing-toeplitz-rust.rst
examples/: validation_gpu_modified_toeplitz.py  validation_gpu_modified_toeplitz_zeromq.py  validation_rust_modified_toeplitz.py  validation_rust_toeplitz.py  validator_custom_class_good_toeplitz.py
src/randextract/: __init__.py  _verify.py  polynomial_hashing.py  randomness_extractor.py  toeplitz_hashing.py  trevisan_extractor.py  validator.py  validator_custom_class.py  xor_one_bit_extractor.py
src/randextract/trevisan/: finite_field_polynomial_design.py  weak_design.py
src/randextract/utilities/: binary_entropy.py  converter.py
tests/: _types.py
tests/unit/: _good_toeplitz.py  _wrong_toeplitz.py  test_modified_toeplitz_hashing.py  test_polynomial_one_bit_extractor.py  test_randomness_extractor.py  test_toeplitz_hashing.py  test_validator.py  test_verify.py  test_xor_one_bit_extractor.py  toeplitz_4_3_bad.npz  toeplitz_4_3_bad.txt  toeplitz_4_3_good.txt
tests/unit/trevisan/: test_block_design.py  test_finite_field_polynomial_design.py
tests/unit/utilities/: test_binary_entropy.py  (+1 more)
(+2 files in other folders)
